--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "@types/three": "^0.161.2",
+    "concurrently": "^8.2.2",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
